# Geometry-Wars-SFML

./: CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml  codeql.yml
resources/: config.toml
src/: components.hpp  config_parser.cpp  config_parser.hpp  config_structs.hpp  entity.cpp  entity.hpp  entity_manager.cpp  entity_manager.hpp  game.cpp  game.hpp  main.cpp  misc.hpp
